Migrates the plugin scripted sbt test